static/css/base.css
html {
    height: 100%;
}

body {
    background: #fff no-repeat center center fixed;
    color: #555;
    font-family: 'Lato';
}

/**************/
.width-25{
    width: 25%;
}

.keep-shop-btn{
    margin-top: 3rem;
}

.product-detail-price{
    text-align: left;
}

.cart{
    color: #0000BD;
}

.subscribe-text{
    font-size: 16px;
    margin-bottom: 8px;
}

.social-media{
    font-size: 20px;
    text-align: center;
}

.index {
    background: url('/media/all-tees.webp') no-repeat center center fixed;
    background-size: cover;
    height: 70vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

.edit-comment{
    text-align: center;
    min-height: 51vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

.delete-comment{
    text-align: center;
    min-height: 45vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

.comments-container{
    display: flex;
    justify-content: center;
}

.about-us-section{
    display: flex;
    align-items: center;
    justify-content: center;
    height: 51vh;
}

.card-container{
    padding: 30px 60px;
    background-color: #ffff;
    border-radius: 10px;
}

.post-container {
    height: 300px;
    width: 300px;
    text-align: center;
}

.news-section{
    height: 42vh;
}

.post-detail-section{
    margin: 70px 200px;
    height: auto;
}

.profile-section{
    height: 55vh;
    display: flex;
    align-items: center;
}
/******** FOOTER *********/

footer {
    background-color: #212529;
    height: 160px;
    color: white;
}

footer p {
    margin: 0;
    text-align: left;
}

.footer-contact{
    display: flex;
    align-items: center;
    margin: 10px;
}

.footer-icon{
    margin-right: 20px;
}

.footer-left,
.footer-middle {
    width: 400px;
}

.footer-left{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
}

.footer-right {
    width: 440px;
}

.sign-out{
    height: 55vh;
    text-align: center;
    font-size: 25px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.sign-up{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 48vh;
    margin: 40px 0px;
    font-size: 20px;
}

.sign-in{
    height: 55vh;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 20px;
}

.shop-bag{
    min-height: 53vh;
}

/******** HEADER *********/

header {
    background-color: #212529;
    text-align: center;
    color: white;
    margin-top: 190px;
    padding: 55px;
}

.subtitle {
    color: #90928E;
    font-size: 20px;
}

/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.logo-font {
    text-transform: uppercase;
}

.main-logo-link {
    width: fit-content;
}

.shop-now-button {
    min-width: 260px;
    border: 3px solid;
    font-weight: bolder;
}

.btn-black {
    background: black;
    color: white;
}

.btn-outline-black {
    background: white;
    color: black !important; /* use important to override link colors for <a> elements */
    border: 1px solid black;
}

.btn-outline-black:hover,
.btn-outline-black:active,
.btn-outline-black:focus {
    background: black;
    color: white !important;
}

.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
    background: #fff;
    color: #222;
}

.text-black {
    color: #000 !important;
}

.border-black {
    border: 1px solid black !important;
}

.bg-black {
    background: #000 !important;
}

.overlay {
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	position: fixed;
	background: white;
	z-index: -1;
}

a.category-badge > span.badge:hover {
    background: #212529 !important;
    color: #fff !important;
}

.btt-button {
    height: 42px;
    width: 42px;
    position: fixed;
    bottom: 10px;
    right: 10px;
}

.btt-link,
.update-link,
.remove-item {
    cursor: pointer;
}

input[name='q']::placeholder {
    color: #aab7c4;
}

/* ------------------------------- bootstrap toasts */

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0; 
    height: 0; 
    border-left: 4px solid transparent;
    border-right: 4px solid transparent; 
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #021342 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

/* -------------------------------- Media Queries */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }
}

/* Allauth form formatting */

.allauth-form-inner-content p {
    margin-top: 1.5rem; /* mt-4 */
    color: #6c757d; /* text-secondary */
}

.allauth-form-inner-content input {
    border-color: #000;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
	display: inline-block;
    font-weight: 400;
    color: #fff;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #000;
    border: 1px solid #000;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0;

    /* standard bootstrap btn transitions */
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
	color: #fff;
    background-color: #222;
    border-color: #222;
}

.allauth-form-inner-content a {
	color: #021342; /* text-info */
}

/* Product Form */

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}


/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .header-container {
        padding-top: 164px;
    }
}

/* pad the top a bit when navbar is collapsed on mobile */
@media (max-width: 991px) {
    .header-container {
        padding-top: 116px;
    }

    body {
        height: calc(100vh - 116px);
    }

    .display-4.logo-font.text-black {
        font-size: 2rem;
    }

    .nav-link {
        padding: 0.15rem;
    }

    .nav-link i.fa-lg {
        font-size: 1rem;
    }

    .navbar-toggler {
        padding: .6rem .6rem;
        font-size: 1rem;
    }

    #delivery-banner h4 {
        font-size: .9rem;
    }

    .btn.btn-outline-black.rounded-0,
    .btn.btn-black.rounded-0 {
        padding: .375rem .375rem;
    }

    .btn.btn-outline-black.rounded-0.btn-lg,
    .btn.btn-black.rounded-0.btn-lg {
        padding: .375rem .375rem;
        font-size: .75rem;
    }

    .increment-qty, .decrement-qty {
        padding: .25rem .5rem !important;
    }
}


/********** FOOTER MOBILE***************/
@media (max-width: 320px) {
    footer{
        height: auto;
        padding: 15px 10px;
    }

    footer p{

    }

    .mobile-footer {
        flex-direction: column;
    }

   
    .footer-left, .footer-middle, .footer-right {
        text-align: center;
    }

    .footer-middle {
        order: 3; 
    }

    

    .footer-right {
        order: 2;
        max-width: 280px;

    }

    .footer-left{
        display: flex;
        align-items: center;
    }

    .copyright{
        display: flex;
        align-items: center;
    }

    .subscribe-text{
        text-align: center;
    }

    .section{
        width: 320px;
    }
/********** HEADER MOBILE***************/
    nav{
        font-size: smaller;
        margin-right: 40px;
    }

    .header-container{
        height: 20px;
        padding-top: 0px;
    }

    #delivery-banner{
       padding-right: 30px;
    }
    
    .index{
        height: 95vh;
    }

    .shop-now-button{
        min-width: 0px;
    }

    header{
        margin-top:80px;
        padding-top: 30px;
        padding-bottom: 15px;
    
    }

    header h1{
        font-size: 30px;
    }

    .card-img-top{
        width: 250px;
        height: 250px;
    }

    .image-container{
        text-align: center;
        padding-top: 50px;

    }

    .product-details-container{
        display: flex;
        text-align: center;
        flex-direction: column;
    }

    .product-detail-price{
        text-align: center;
    }

    .size-qty-mobile{
        display: flex;
        flex-direction: column;
        align-items: center;
        text-align: center;
    }

    .form-control{
        text-align: center;
    }

    .keep-shop-btn{
        margin-top: 5px;
    }

    .table-responsive .table th, .table-responsive .table td {
        display: block;
        width: 100%; 
        text-align: center; 
    }
    
    .table-responsive .table thead {
        display: none; 
    }
    
    .table-responsive .table tr {
        margin-bottom: 1rem;
        border-bottom: 2px solid #dee2e6; 
    }
    
    .table-responsive .table td:before {
        content: attr(data-label); 
        font-weight: bold; 
        display: block; 
    }

    .table-responsive {
        text-align: center;
    }
    
    .width-25{
        width: 0;
        text-align: center;
    }

    .sign-in, .sign-up{
        font-size: smaller;
        width: 280px;
        margin-left: 20px;
        margin-top: 30px;
        margin-bottom: 20px;
    }

    .sign-up{
        margin-top: 120px;
        margin-bottom: 100px;
    }
}

